# quteqoin

./: .gitignore  CMakeLists.txt  LICENSE-FR.txt  README.md  eu.ototu.Quteqoin.metainfo.xml  eu.ototu.quteqoin.metainfo.xml  gitversion.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quteqoin.desktop  quteqoin.pro
.github/workflows/: build.yml  c-cpp.yml
.qtc_clangd/: compile_commands.json
app/: app.pro  main.cpp  mainwindow.cpp  mainwindow.h
app/core/: qqbackendupdatedevent.cpp  qqbouchot.cpp  qqbouchot.h  qqbouchotdef.h  qqmessagetransformfilter.h  qqnetworkaccessor.cpp  qqnorlogeref.cpp  qqnorlogeref.h  qqpiniurlhelper.cpp  qqpiniurlhelper.h  qqpost.cpp  qqpost.h  qqsettingsparams.h  qqsimplepostdisplayfilter.cpp  qqsimplepostdisplayfilter.h  qqtotoz.cpp  qqtotoz.h  qqtotozdownloader.cpp  qqtypes.h
app/rc/: quteqoin_img.qrc  totoz_eu
app/ui/: qqpalmilineedit.cpp  qqpalmipede.cpp  qqpinipede.cpp  qqpinipede.h  qqpinisearchwidget.cpp  qqpinisearchwidget.h  qqpostparser.cpp  qqsettingsmanager.cpp  qqsettingsmanager.ui  qqtextbrowser.cpp  qqtextbrowser.h  qqtotozmanager.cpp  qqtotozmanager.h  qqtotozviewer.cpp  qqtotozviewer.h
branches/0.35/: mainwindow.cpp  mainwindow.ui  quteqoin.pro
branches/0.42/: mainwindow.cpp  quteqoin.pro
branches/0.56/: mainwindow.cpp  mainwindow.ui  quteqoin.pro
branches/plaintextquteqoin/: main.cpp  mainwindow.cpp  mainwindow.h  quteqoin.desktop
core/: qqbackendupdatedevent.cpp  qqbakdisplayfilter.cpp  qqbakdisplayfilter.h  qqbigornoitem.cpp  qqbigornoitem.h  qqboardstatechangeevent.cpp  qqboardstatechangeevent.h  qqbouchot.cpp  qqbouchot.h  qqhuntpixmapitem.cpp  qqmessagetransformfilter.cpp  qqmussel.cpp  qqmussel.h  qqnetworkaccessor.cpp  qqnetworkaccessor.h  qqnorloge.cpp  qqnorloge.h  qqnorlogeref.cpp  qqnorlogeref.h  qqpiniurlhelper.cpp  qqpiniurlhelper.h  qqpost.cpp  qqpost.h  qqpurgebouchothistoevent.cpp  qqpurgebouchothistoevent.h  qqsettings.cpp  qqsettings.h  qqsettingsparams.h  qqsimplepostdisplayfilter.cpp  qqsimplepostdisplayfilter.h  qqtextcharformat.h  qqtotoz.cpp  qqtotoz.h  qqtotozdownloader.cpp  qqtotozdownloader.h  qqtotozmanager.cpp  qqtotozmanager.h  qqtypes.h  qqwebdownloader.cpp  qqwebdownloader.h  (+4 more)
core/backend/: qqbackend.cpp  qqbackend.h  qqbouchotbackend.cpp  qqbouchotbackend.h  qqslackbackend.cpp  qqslackbackend.h
core/parsers/: qqbackendparser.cpp  qqbackendparser.h  qqcustomxmlparser.cpp  qqcustomxmlparser.h  qqtsvparser.cpp  qqtsvparser.h  qqxmlparser.cpp  qqxmlparser.h
core/totozmanager/: qqtmrequester.cpp  qqtmrequester.h
dists/Archlinux/: PKGBUILD
dists/Debian/: changelog
ext/nanopb/: nanopb.pro
lib/nanim/: nanim.pb  nanim.pro
lib/qutehunt/: qqduck.h  qqduckpixmapitem.cpp  qqduckpixmapitem.h  qqhuntanimation.h  qqhuntingview.cpp  qutehunt.pro
lib/qutetools/: qutetools.h  qutetools.pro
qml/: QQmlJS.js  QQmlMain.qml  QQmlNetworkSettings.qml  QQmlPalmi.qml  QQmlPalmiBoardItem.qml  QQmlPalmiEditItem.qml  QQmlPinni.qml  QQmlTotozSettings.qml  documenthandler.cpp  documenthandler.h  quteqoin_qml.qrc
rc/: emojis  make_emoji.sh  nsfw_totoz_eu_claudex  nsfw_totoz_moul_es  quteqoin_defs.qrc  quteqoin_img.qrc  totoz-forum_hardware_fr  totoz-totoz_eu  totoz_eu  totoz_eu_claudex  totoz_moul_es
tags/0.42/: main.cpp  mainwindow.cpp
tags/0.49/: quteqoin.pro
trunk/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quteqoin.pro
trunk/app/: app.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/core/: qqbackendupdatedevent.h  qqbigornoitem.h  qqboardstatechangeevent.h  qqbouchot.cpp  qqbouchot.h  qqduck.cpp  qqhuntpixmapitem.h  qqmessageparser.cpp  qqmessagetransformfilter.h  qqmussel.cpp  qqmussel.h  qqnetworkaccessor.cpp  qqnetworkaccessor.h  qqnorloge.cpp  qqnorloge.h  qqnorlogeref.cpp  qqnorlogeref.h  qqpiniurlhelper.cpp  qqpiniurlhelper.h  qqpost.cpp  qqpost.h  qqpurgebouchothistoevent.cpp  qqsettings.cpp  qqsettings.h  qqsettingsparams.h  qqtotoz.cpp  qqtotoz.h  qqtotozdownloader.cpp  qqtotozdownloader.h  qqtotozmanager.cpp  qqtypes.h  qqwebimagedownloader.cpp  qutetools.cpp
trunk/qml/: QQmlGeneralSettings.qml  QQmlMain.qml  QQmlSettingsEditor.qml  documenthandler.h  quteqoin_qml.qrc
trunk/rc/: animations.qrc  forum_hardware_fr  quteqoin_anims.qrc  quteqoin_defs.qrc  quteqoin_img.qrc  totoz-nsfw_totoz_eu  totoz_eu_claudex  tribunesDef.qrc
trunk/ui/: qqboardinfo.cpp  qqboardinfo.h  qqboardinfo.ui  qqboardsinfo.cpp  qqboardsinfo.h  qqboardsinfo.ui  qqbouchotsettingsdialog.cpp  qqbouchotsettingsdialog.h  qqbouchotsettingsdialog.ui  qqcmdtoolbuttons.cpp  qqduckpixmapitem.cpp  qqduckpixmapitem.h  qqhuntingview.cpp  qqhuntingview.h  qqimageviewer.cpp  qqmessageblockuserdata.cpp  qqmessageblockuserdata.h  qqmusselinfo.cpp  qqmusselinfo.h  qqpalmilineedit.cpp  qqpalmilineedit.h  qqpalmipede.cpp  qqpalmipede.h  qqpalmipede.ui  qqpinipede.cpp  qqpinipede.h  qqpinisearchwidget.cpp  qqpostparser.cpp  qqpostparser.h  qqproxyauthdialog.cpp  qqproxyauthdialog.ui  qqsettingsdialog.cpp  qqsettingsdialog.h  qqsettingsdialog.ui  qqsettingsmanager.cpp  qqsettingsmanager.h  qqsettingsmanager.ui  qqsyntaxhighlighter.cpp  qqsyntaxhighlighter.h  qqtextbrowser.cpp  (+6 more)
trunk/xml/: qqxmlparser.cpp  qqxmlparser.h
ui/: qqboardinfo.cpp  qqboardinfo.h  qqboardinfo.ui  qqboardsinfo.cpp  qqboardsinfo.h  qqboardsinfo.ui  qqbouchotsettingsdialog.cpp  qqbouchotsettingsdialog.h  qqbouchotsettingsdialog.ui  qqduckpixmapitem.cpp  qqhuntingview.cpp  qqhuntingview.h  qqimageviewer.cpp  qqimageviewer.h  qqmessageblockuserdata.cpp  qqmessageblockuserdata.h  qqmlpalmipede.cpp  qqmlpalmipede.h  qqmonopini.h  qqmusselinfo.cpp  qqmusselinfo.h  qqpalmilineedit.cpp  qqpalmilineedit.h  qqpalmipede.cpp  qqpalmipede.h  qqpalmipede.ui  qqpinipede.cpp  qqpinipede.h  qqpinisearchwidget.ui  qqpostparser.cpp  qqpostparser.h  qqproxyauthdialog.cpp  qqproxyauthdialog.h  qqproxyauthdialog.ui  qqsettingsdialog.cpp  qqsettingsdialog.h  qqsettingsdialog.ui  qqsettingsmanager.cpp  qqsettingsmanager.h  qqsettingsmanager.ui  (+12 more)
ui/palmipede/: qqdockpalmi.cpp  (+7 more)
wiki/: Main.wiki  TODO.wiki
xml/: qqxmlparser.cpp  qqxmlparser.h
(+355 files in other folders)
